--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -12,7 +12,7 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - run: |
-          yarn --cwd ./web install --immutable --immutable-cache --check-cache \
+          yarn --cwd ./web add --immutable --immutable-cache --check-cache \
           yarn --cwd ./web build
       - uses: FirebaseExtended/action-hosting-deploy@v0
         with:
