--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -21,9 +21,8 @@ jobs:
 
       - run: |
           pushd web
-          ls -la
           yarn install --immutable --immutable-cache
-          yarn build
+          yarn generate
           popd
 
       - uses: FirebaseExtended/action-hosting-deploy@v0
