Added sanitizeHtml to MD render

--- a/firebase.json
+++ b/firebase.json
@@ -44,6 +44,15 @@
             "value": "max-age=604800"
           }
         ]
+      },
+      {
+        "source": "**/*.html",
+        "headers": [
+          {
+            "key": "Content-Security-Policy",
+            "value": "frame-ancestors 'self'"
+          }
+        ]
       }
     ]
   },
