--- a/web/package.json
+++ b/web/package.json
@@ -11,10 +11,10 @@
   },
   "devDependencies": {
     "@nuxtjs/google-fonts": "^3.2.0",
+    "@types/markdown-it-highlightjs": "^3.3.4",
     "@types/nanoid-dictionary": "^4.2.0",
     "@types/node": "^18.16.19",
     "@types/sanitize-html": "^2.11.0",
-    "@types/showdown": "^2.0.6",
     "nuxt": "^3.14.159",
     "nuxt-quasar-ui": "^2.1.6",
     "quasar-extras-svg-icons": "^1.36.0",
