Added video to home page

--- a/web/package.json
+++ b/web/package.json
@@ -82,5 +82,6 @@
     "vue-markdown-render": "^2.0.1",
     "vue-router": "latest",
     "vue3-smooth-dnd": "^0.0.5"
-  }
+  },
+  "packageManager": "yarn@1.22.19+sha1.4ba7fc5c6e704fce2066ecbfb0b0d8976fe62447"
 }
