--- a/web/package.json
+++ b/web/package.json
@@ -7,7 +7,8 @@
     "dev": "nuxt dev",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
-    "postinstall": "nuxt prepare"
+    "postinstall": "nuxt prepare",
+    "emulators": "firebase emulators:start --only auth,firestore,functions,hosting,storage --import ../.data/firebase --export-on-exit"
   },
   "devDependencies": {
     "@nuxtjs/google-fonts": "^3.2.0",
