--- a/functions/package.json
+++ b/functions/package.json
@@ -13,10 +13,10 @@
   "engines": {
     "node": "18"
   },
-  "main": "lib/index.js",
+  "main": "lib/functions/src/index.js",
   "dependencies": {
-    "firebase-admin": "^11.10.1",
-    "firebase-functions": "^4.4.1"
+    "firebase-admin": "^13.0.2",
+    "firebase-functions": "^6.3.1"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.12.0",
@@ -24,7 +24,7 @@
     "eslint": "^8.9.0",
     "eslint-config-google": "^0.14.0",
     "eslint-plugin-import": "^2.25.4",
-    "firebase-functions-test": "^3.1.0",
+    "firebase-functions-test": "^3.4.0",
     "typescript": "^4.9.0"
   },
   "private": true
