--- a/web/package.json
+++ b/web/package.json
@@ -47,6 +47,7 @@
     "@tiptap/pm": "^2.0.4",
     "@tiptap/starter-kit": "^2.0.4",
     "@tiptap/vue-3": "^2.0.4",
+    "@vueuse/integrations": "^12.5.0",
     "@vueuse/nuxt": "^10.2.1",
     "clsx": "^2.1.1",
     "codemirror": "^6.0.1",
