--- a/web/package.json
+++ b/web/package.json
@@ -39,6 +39,9 @@
     "@codemirror/lang-xml": "^6.0.2",
     "@codemirror/legacy-modes": "^6.3.3",
     "@firebase/app-types": "^0.9.0",
+    "@nuxt/content": "^3.1.0",
+    "@nuxtjs/robots": "^5.2.2",
+    "@nuxtjs/sitemap": "^7.2.4",
     "@pinia/nuxt": "^0.5.1",
     "@quasar/extras": "^1.16.9",
     "@replit/codemirror-lang-csharp": "^6.1.0",
@@ -76,6 +79,7 @@
     "qrcode": "^1.5.3",
     "quasar": "^2.17.4",
     "sanitize-html": "^2.11.0",
+    "sitemap": "^8.0.0",
     "tailwind-merge": "^2.5.5",
     "tailwindcss": "^3.4.16",
     "thememirror": "^2.0.1",
